--- a/client/src/components/Skills/Skills.css
+++ b/client/src/components/Skills/Skills.css
@@ -1,6 +1,6 @@
-/* .Skills-container {
-    padding-top: 7em;
-} */
+.Skills-container {
+    padding-top: 3em;
+}
 
 .Skills-header {
     text-decoration: underline;
